Add typed Source/Sink to Trigger and stamp depends-on labels
Two related changes that bring triggers into the depends-on label
index so the pre-delete dep-guard can find them.

Trigger API:

  - Replace the old `(String database, List<String> path)` pair with
    a typed `Source source` field (existing hoptimator-api type).
    Drop the convenience getters database() / path() / table() /
    schema() — callers go through trigger.source().X() for symmetry
    with the new Sink.
  - Add an optional `Sink sink` field for bridging-tier triggers
    (LogicalTableDeployer's offline → online reverse-ETL flow), so
    the deployer can stamp a depends-on-sink annotation in addition
    to the source side.
  - Source is nullable for DROP / PAUSE / RESUME paths that only
    need the trigger name.

K8sTriggerDeployer stamping:

  - On both the toK8sObject and the partial-update paths, stamp:
      depends-on-<sourceSlug>: <sourceIdentifier>
      annotation depends-on-sources: <sourceIdentifier>
    and when sink is set:
      depends-on-<sinkSlug>: <sinkIdentifier>
      annotation depends-on-sink: <sinkIdentifier>

LogicalTableDeployer wiring:

  - Pass `offlineSource` directly as the trigger's Source and a Sink
    derived from `onlineSource` (when present) as the trigger's Sink.

HoptimatorDdlExecutor:

  - Resolve the target table's database name the same way DROP TABLE
    resolves it (HoptimatorJdbcTable / TemporaryTable unwrap), so
    user-created `CREATE TRIGGER ... ON <schema>.<table>` triggers
    participate in the dep-guard. Without this, Trigger.source was
    null and K8sTriggerDeployer skipped label stamping — a trigger
    could outlive its source silently.

Tests:

  - K8sTriggerDeployerTest gains updateStampsSinkLabelWhenTriggerCarriesASink
    pinning that a Trigger carrying a Sink stamps both source-side and
    sink-side depends-on labels on the partial-update path.
  - TriggerTest covers the new accessor shape (source(), sink(), null
    source for the 